--- a/src/components/FeaturedMovie/FeaturedMovie.css
+++ b/src/components/FeaturedMovie/FeaturedMovie.css
@@ -8,15 +8,16 @@
     background: linear-gradient(to top, #111 10%, transparent 90%);
 }
 
-.featured--vertical {
+.featured--horizontal {
     width: inherit;
     height: inherit;
     background: linear-gradient(to right, #111 30%, transparent 70%);
-}
-
-.featured--name, 
-.featured--info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding-left: 30px;
+    /* padding-bottom: 150px; */
+    padding-top: 70px;
 }
 
 .featured--name {
@@ -67,8 +68,8 @@
     transition: all ease 0.2s;
 }
 
-.featured--watchbutton, 
-.featured--mylistbutton {
+.featured--watchbutton:hover, 
+.featured--mylistbutton:hover {
     opacity: 0.7;
 }
 
