--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,14 @@ body {
     margin-top: 0;
 }
 
+.loading {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: 99;
+    background-color: #000;
+    display: flex;
+    justify-content: center;
+}
