--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,3 +5,11 @@ footer {
     justify-content: center;
     text-align: center;
 }
+.footer--contact {
+    justify-content: space-evenly;
+}
+
+.footer--icon {
+    width: 90px;
+    margin: 0 0 -5px;
+}
